# conway_life_c

./: .gitignore  CMakeLists.txt  test.sh
boards/rle/: b29_synth.rle  weekender_synth.rle
src/: draw.c  draw.h  life.c  life.h  main.c
